Correction après soutenance, hauteur des cartes d'activité en mobile , erreurs css au validateur w3c et scroll horizontal sur la version mobile firefox.

--- a/mobile.css
+++ b/mobile.css
@@ -101,7 +101,7 @@ form{
     border-right: none;
     border-top: 1px solid #F2F2F2;
     border-bottom: 1px solid #F2F2F2;
-    padding-right: 15%;
+    /* padding-right: 15%; */
     padding-left: 3%;
     font-size: 20px;
     color: black;
@@ -260,7 +260,6 @@ input{
     padding-bottom: 1%;
     margin: 1%;
     border-radius: 25px 25px 25px 25px;
-    align-items: left;
     box-shadow:1px 1px 32px -5px rgba(0,0,0,0.76);
     height: 85%;
     margin-top: 3%;
@@ -319,8 +318,8 @@ input{
 }
 
 .titrePremierGroupe{
-    margin-left: 3%;
-    margin-top: 2%;
+    margin-left: 5%;
+    margin-top: 5%;
     font-size: 20px;
     font-weight: bolder;
 }
@@ -389,7 +388,8 @@ input{
 #vieuxPort{
     box-shadow:1px 1px 32px -5px rgba(0,0,0,0.76);
     border-radius: 15px 15px 15px 15px;
-    margin-bottom: 3%;
+    margin-bottom: 5%;
+    margin-top: 5%;
 }
 
 #vieuxPort img{
@@ -411,7 +411,7 @@ input{
     box-shadow:1px 1px 32px -5px rgba(0,0,0,0.76);
     border-radius: 15px 15px 15px 15px;
     padding-bottom: 30%;
-    margin-bottom: 3%;
+    margin-bottom: 5%;
 }
 
 #fortDePomegues img{
@@ -427,7 +427,7 @@ input{
     box-shadow:1px 1px 32px -5px rgba(0,0,0,0.76);
     border-radius: 15px 15px 15px 15px;
     padding-bottom: 15%;
-    margin-bottom: 3%;
+    margin-bottom: 5%;
 }
 
 #ilesDuFrioul img{
@@ -440,7 +440,7 @@ input{
 #parcNationalCalanques{
     box-shadow:1px 1px 32px -5px rgba(0,0,0,0.76);
     border-radius: 15px 15px 15px 15px;
-    margin-bottom: 3%;
+    margin-bottom: 5%;
 }
 
 #parcNationalCalanques img{
@@ -454,14 +454,14 @@ input{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin-bottom: 3%;
+    margin-bottom: 5%;
 }
 
 #notreDame{
     box-shadow:1px 1px 32px -5px rgba(0,0,0,0.76);
     width: 100%;
     border-radius: 15px 15px 15px 15px;
-    margin-bottom: 3%;
+    margin-bottom: 5%;
 }
 
 #notreDame img{
@@ -475,7 +475,7 @@ input{
     box-shadow:1px 1px 32px -5px rgba(0,0,0,0.76);
     width: 100%;
     border-radius: 15px 15px 15px 15px;
-    margin-bottom: 3%;
+    margin-bottom: 5%;
 }
 
 #longchamp img{
@@ -486,7 +486,6 @@ input{
 }
 
 footer{
-    align-items: left;
     width: 100%;
     background-color: #F2F2F2;
 }
@@ -809,4 +808,11 @@ li{
 
 h4{
     margin-left: 2%;
+}
+
+.titrePremierGroupe3{
+    margin-left: 5%;
+    margin-top: 2%;
+    font-size: 20px;
+    font-weight: bolder;
 }
